Fix browser demo

--- a/examples/browser.html
+++ b/examples/browser.html
@@ -23,7 +23,7 @@
           };
         },
       });
-      app.use(VueTelInput);
+      app.use(VueTelInput.default);
       app.mount('#app');
     </script>
   </body>
